--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@
 
 .row {
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     display: flex;
 }
 
